Trying to find the issue with positioning in home

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -239,11 +239,11 @@ body {
   font-family: "didot";
 }
 
-header {
-  // margin: 2rem;
-  min-height: 100vh;
-  position: relative;
-}
+// header {
+//   // margin: 2rem;
+//   min-height: 100vh;
+//   position: relative;
+// }
 
 .putting-margin-to-home-page {
   padding: 2rem;
