--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -546,20 +546,17 @@
 
     .side-navbar {
       width: 50%;
-      .top-navbar {
-        // margin-top: -16rem;
-      }
     }
 
-    .toggle-button-position {
-      button {
-        margin-top: -24rem;
-      }
-    }
+    // .toggle-button-position {
+    //   button {
+    //     margin-top: -24rem;
+    //   }
+    // }
 
-    .nav-icon {
-      margin-top: -24rem;
-    }
+    // .nav-icon {
+    //   margin-top: -24rem;
+    // }
 
     // ? About section
 
