--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -303,7 +303,7 @@ nav a h2:hover {
 
 .my-introduction-heading {
 
-  margin-top: 18rem;
+  // margin-top: 18rem;
   .tominc-media-query {
     display: flex;
   }
