--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -214,7 +214,7 @@ body {
   font-size: 8px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  margin-right: .8rem;
+  margin-right: 2.5rem;
 
   .center {
     font-size: 0.4rem;
@@ -243,11 +243,11 @@ body {
   font-family: "didot";
 }
 
-// header {
-//   // margin: 2rem;
-//   min-height: 100vh;
-//   position: relative;
-// }
+header {
+  // margin: 2rem;
+  min-height: 100vh;
+  position: relative;
+}
 
 .putting-margin-to-home-page {
   padding: 2rem;
@@ -280,9 +280,10 @@ nav a h2:hover {
 }
 
 .top-navbar {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
+  padding-right: 3rem;
 }
 
 // .top-navbar:hover a h2 {
@@ -298,6 +299,7 @@ nav a h2:hover {
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 4rem;
+  padding-right: 5rem;
 }
 
 .navbar-contacts-directions {
