--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -283,7 +283,6 @@ nav a h2:hover {
   max-width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-right: 3rem;
 }
 
 // .top-navbar:hover a h2 {
@@ -299,7 +298,7 @@ nav a h2:hover {
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 4rem;
-  padding-right: 5rem;
+  padding-bottom: 2rem;
 }
 
 .navbar-contacts-directions {
