--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -338,6 +338,10 @@
 // ! max-width: 1024px - iPad Pro 12
 @media only screen and (max-width: 1024px) {
 
+  .overlay {
+    opacity: 1;
+  }
+
   .disabled {
     pointer-events: none;
     // margin-left: 2.9rem;
