--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1109,60 +1109,70 @@ textarea {
   .putting-margin-to-home-page {
     padding: 0;
   }
-  .nav-icon {
-    width: 50px;
+  #hamburger {
     position: fixed;
-    margin-top: 2rem;
+    top: 2rem;
     right: 2rem;
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 80px;
+    height: 80px;
     cursor: pointer;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
     z-index: 999999;
   }
-  .nav-icon span {
-    display: block;
-    position: absolute;
+  .hamburger-icon {
+    width: 50px;
     height: 9px;
-    width: 100%;
     background: #900000;
     border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
   }
-  .nav-icon span:nth-child(1) {
-    top: 0px;
+  .hamburger-icon::before,
+  .hamburger-icon::after {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 9px;
+    background: #900000;
+    border-radius: 9px;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    z-index: 9999999;
   }
-  .nav-icon span:nth-child(2), .nav-icon span:nth-child(3) {
-    top: 18px;
+  .hamburger-icon::before {
+    -webkit-transform: translateY(-16px);
+            transform: translateY(-16px);
   }
-  .nav-icon span:nth-child(4) {
-    top: 36px;
+  .hamburger-icon::after {
+    -webkit-transform: translateY(16px);
+            transform: translateY(16px);
   }
-  .nav-icon.active span:nth-child(1) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
+  #hamburger.active .hamburger-icon {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+    background: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
-  .nav-icon.active span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
+  #hamburger.active .hamburger-icon::before {
+    -webkit-transform: rotate(45deg) translate(35px, -35px);
+            transform: rotate(45deg) translate(35px, -35px);
   }
-  .nav-icon.active span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+  #hamburger.active .hamburger-icon::after {
+    -webkit-transform: rotate(-45deg) translate(35px, 35px);
+            transform: rotate(-45deg) translate(35px, 35px);
   }
-  .nav-icon.active span:nth-child(4) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
-  }
-  .side-navbar {
+  #side-navbar {
     position: fixed;
     top: 0;
     right: -100%;
@@ -1182,12 +1192,12 @@ textarea {
     -webkit-transition: 1s ease-in-out;
     transition: 1s ease-in-out;
   }
-  .side-navbar nav a {
+  #side-navbar nav a {
     opacity: .8;
     -webkit-transition: 1s;
     transition: 1s;
   }
-  .side-navbar .top-navbar {
+  #side-navbar .top-navbar {
     -webkit-box-pack: unset;
         -ms-flex-pack: unset;
             justify-content: unset;
@@ -1199,11 +1209,11 @@ textarea {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .side-navbar .top-navbar h2 {
+  #side-navbar .top-navbar h2 {
     color: antiquewhite;
     font-size: 4rem;
   }
-  .side-navbar .bottom-navbar {
+  #side-navbar .bottom-navbar {
     bottom: unset;
     -webkit-box-pack: unset;
         -ms-flex-pack: unset;
@@ -1216,16 +1226,16 @@ textarea {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .side-navbar .bottom-navbar h2 {
+  #side-navbar .bottom-navbar h2 {
     color: antiquewhite;
     font-size: 4rem;
   }
-  .side-navbar .bottom-navbar .navbar-contacts-directions {
+  #side-navbar .bottom-navbar .navbar-contacts-directions {
     -webkit-writing-mode: horizontal-tb;
         -ms-writing-mode: lr-tb;
             writing-mode: horizontal-tb;
   }
-  .side-navbar.active {
+  #side-navbar.active {
     right: 0;
   }
   nav:hover a h2 {
@@ -1233,7 +1243,7 @@ textarea {
     padding: 0;
     margin: 0;
   }
-  .darkmode .side-navbar {
+  .darkmode #side-navbar {
     background: antiquewhite;
   }
   .darkmode .top-navbar h2, .darkmode .bottom-navbar h2 {
@@ -1377,6 +1387,9 @@ textarea {
 }
 
 @media only screen and (max-width: 1024px) {
+  .scrolls {
+    right: -1rem;
+  }
   .overlay {
     opacity: 1;
   }
@@ -1385,6 +1398,9 @@ textarea {
   }
   .projects-media-query-hover {
     margin-left: 2.9rem;
+  }
+  .toggle-button-position button {
+    margin-top: 3.5vh;
   }
   .my-introduction-heading {
     margin-top: 26rem;
@@ -1527,7 +1543,10 @@ textarea {
 }
 
 @media screen and (max-device-height: 1194px) and (max-device-width: 834px) {
-  .side-navbar {
+  .scrolls {
+    right: -.5rem;
+  }
+  #side-navbar {
     width: 50%;
   }
   .about {
@@ -1572,6 +1591,48 @@ textarea {
   }
   .footer {
     margin-top: 6rem;
+  }
+}
+
+@media screen and (max-height: 1112px) and (max-width: 834px) {
+  #side-navbar {
+    width: 50%;
+  }
+  .about {
+    margin-top: -38rem;
+  }
+  .positioning-about-main-heading {
+    width: 350px;
+  }
+  .positioning-brand-statement-paragraph {
+    width: 650px;
+    margin-left: -22rem;
+  }
+  .my-photo {
+    width: 250px;
+  }
+  .my-photo-positioning {
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-height: 1112px) {
+  .experiences {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .experiences-main-heading {
+    overflow-wrap: normal;
+    font-size: 14rem;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    -webkit-writing-mode: vertical-lr;
+        -ms-writing-mode: tb-lr;
+            writing-mode: vertical-lr;
   }
 }
 
@@ -1724,7 +1785,7 @@ textarea {
 }
 
 @media only screen and (max-width: 375px) {
-  .nav-icon {
+  #nav-icon {
     margin-right: 2rem;
   }
   .scroll-home {
